--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -230,7 +230,8 @@
             android:label="@string/app_name"
             android:theme="@style/HomeTheme" 
             android:exported="false"
-            android:excludeFromRecents="true"
+            android:excludeFromRecents="false"
+            android:screenOrientation="portrait"
             />
         <activity
             android:name="org.witness.informacam.app.LoginActivity"
