--- a/app/.project
+++ b/app/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>InformaApp</name>
+	<name>CameraVApp</name>
 	<comment></comment>
 	<projects>
 	</projects>
