--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -37,6 +37,7 @@
     <application
         android:name="org.witness.informacam.InformaCam"
         android:allowBackup="false"
+        android:excludeFromRecents="true"        
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.Light.NoActionBar" 
         android:icon="@drawable/ic_launcher">
@@ -71,7 +72,7 @@
             android:name="org.witness.informacam.app.InformaActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection"
             android:label="@string/app_name"
-            android:excludeFromRecents="false"
+            android:excludeFromRecents="true"
         	android:icon="@drawable/ic_launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -125,14 +126,7 @@
 				<action android:name="android.intent.action.EDIT" />
                 <action android:name="android.intent.action.GET_CONTENT" />
 				
-                <data  public void onCreate(Bundle savedInstanceState) {  
-        super.onCreate(savedInstanceState);
-        setContentView(R.layout.webview);  
-        WebView wv;  
-        wv = (WebView) findViewById(R.id.webview1);  
-        wv.loadUrl("file:///android_asset/guide/en/index.html");   // now it will not fail here
-    } 
-                    android:mimeType="application/ictd"
+                <data  public void android:mimeType="application/ictd"
                     android:scheme="content" />
             </intent-filter>
             <intent-filter>
@@ -241,7 +235,7 @@
             android:label="@string/app_name"
             android:theme="@style/HomeTheme" 
             android:exported="false"
-            android:excludeFromRecents="false"
+            android:excludeFromRecents="true"
             android:screenOrientation="portrait"
             />
         <activity
