--- a/cameraVApp/src/main/AndroidManifest.xml
+++ b/cameraVApp/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
         android:allowBackup="false"
         android:excludeFromRecents="true"        
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo.Light.NoActionBar" 
+        android:theme="@android:style/Theme.Holo.Light.NoActionBar"
+        android:icon="@mipmap/ic_launcher"
 
         >
         
