--- a/cameraVApp/build.gradle
+++ b/cameraVApp/build.gradle
@@ -32,6 +32,16 @@ android {
 
 }
 
+android {
+      lintOptions {
+          checkReleaseBuilds false
+          // Or, if you prefer, you can continue to check for errors in release builds,
+          // but continue the build even when errors are found:
+          abortOnError false
+      }
+  }
+
+
 dependencies {
     compile project(':informaCam')
     compile 'info.guardianproject:netcipher:1.2.0'
