--- a/informaCam/build.gradle
+++ b/informaCam/build.gradle
@@ -33,10 +33,9 @@ android {
 }
 
 dependencies {
-
     compile 'info.guardianproject:android-ffmpeg-java:1.0.1'
     compile 'info.guardianproject:netcipher:1.2.0'
-    compile 'info.guardianproject:camcipher:2.0.2'
+    compile project(':camCipher')
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.google.code.gson:gson:2.1'
     compile 'com.google.guava:guava:11.0.2'
