--- a/camCipher/build.gradle
+++ b/camCipher/build.gradle
@@ -20,11 +20,11 @@ android {
 dependencies {
     compile 'com.android.support:support-v4:19.1.0'
     compile 'com.github.japgolly.android:svg-android:2.0.6'
-    compile files('libs/IOCipher-v0.3-2-g926b982.jar')
-    compile files('libs/cachewordlib-v0.1-3-g71cc426-debug.jar')
+    compile 'info.guardianproject.cacheword:cachewordlib:0.1'
+    compile 'info.guardianproject.iocipher:IOCipher:0.3'
     compile files('libs/jcodec.jar')
-    compile files('libs/core-1.51.0.0.jar')
-    compile files('libs/prov-1.51.0.0.jar')
-    compile files('libs/pg-1.51.0.0.jar')
-    compile files('libs/pkix-1.51.0.0.jar')
+    compile 'com.madgag.spongycastle:core:1.50.0.0'
+    compile 'com.madgag.spongycastle:pg:1.50.0.0'
+    compile 'com.madgag.spongycastle:prov:1.50.0.0'
+    compile 'com.madgag.spongycastle:pkix:1.50.0.0'
 }
