--- a/cameraVApp/build.gradle
+++ b/cameraVApp/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 22
+    buildToolsVersion '23.0.1'
 
     defaultConfig {
         applicationId "org.witness.informacam.app"
@@ -47,7 +47,6 @@ dependencies {
     compile 'net.hockeyapp.android:HockeySDK:3.5.0'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.3'
     compile 'com.android.support:multidex:1.0.1'
-
 }
 
 repositories {
