--- a/informaCam/build.gradle
+++ b/informaCam/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 22
+    buildToolsVersion '23.0.1'
 
     defaultConfig {
         minSdkVersion 16
