update build files

--- a/local.properties
+++ b/local.properties
@@ -8,5 +8,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Aug 11 21:53:05 EDT 2015
-ndk.dir=/home/n8fr8/dev/android/ndk
-sdk.dir=/home/n8fr8/dev/android/sdk
+#ndk.dir=/home/n8fr8/dev/android/ndk
+#sdk.dir=/home/n8fr8/dev/android/sdk
