--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
 android.useDeprecatedNdk=true
-aar.deployPath=/home/n8fr8/dev/repos/gpgradle
+#aar.deployPath=/home/n8fr8/dev/repos/gpgradle
 org.gradle.daemon=true
