--- a/cameraVApp/src/main/AndroidManifest.xml
+++ b/cameraVApp/src/main/AndroidManifest.xml
@@ -102,7 +102,7 @@
             android:name="org.witness.informacam.app.InformaActivity-Alt"
             android:targetActivity="org.witness.informacam.app.InformaActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection"
-            android:label="@string/app_name_alt"
+            android:label="@string/menu_settings"
             android:excludeFromRecents="true"
         	android:icon="@drawable/ic_launcher_alt">
             <intent-filter>
