--- a/camCipher/build.gradle
+++ b/camCipher/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 23
     buildToolsVersion '23.0.1'
     defaultConfig {
         minSdkVersion 14
@@ -15,10 +15,13 @@ android {
     }
     productFlavors {
     }
+
+    useLibrary  'org.apache.http.legacy'
+
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:19.1.0'
+    compile 'com.android.support:support-v4:23.0.1'
     compile 'com.github.japgolly.android:svg-android:2.0.6'
     compile 'info.guardianproject.cacheword:cachewordlib:0.1'
     compile 'info.guardianproject.iocipher:IOCipherStandalone:0.3'
