--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0'
+        classpath 'com.android.tools.build:gradle:2.3.0'
     }
 }
 
@@ -12,7 +12,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://raw.githubusercontent.com/guardianproject/gpmaven/master" }
-
+        maven { url "https://jitpack.io" }
     }
 }
 
