--- a/informaCam/build.gradle
+++ b/informaCam/build.gradle
@@ -1,15 +1,13 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '23.0.1'
+    compileSdkVersion 25
+    buildToolsVersion '25'
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 21
+        minSdkVersion 14
+        targetSdkVersion 25
         multiDexEnabled true
-
-
     }
 
     sourceSets {
@@ -26,11 +24,6 @@ android {
         }
     }
 
-    dexOptions {
-        incremental true
-        javaMaxHeapSize "4g"
-    }
-
     useLibrary  'org.apache.http.legacy'
 
 }
@@ -38,13 +31,14 @@ android {
 dependencies {
     compile 'info.guardianproject:android-ffmpeg-java:1.0.1'
     compile 'info.guardianproject.netcipher:netcipher:1.2'
-    compile 'info.guardianproject.iocipher:IOCipherStandalone:0.3'
     compile 'info.guardianproject.cacheword:cachewordlib:0.1'
     compile project(':camCipher')
-    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile project(':libonionshare')
+    compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.google.code.gson:gson:2.1'
     compile 'com.google.guava:guava:11.0.2'
-    compile 'com.google.android.gms:play-services-location:7.8.0'
+    compile 'com.google.android.gms:play-services-location:10.2.0'
+    compile 'com.google.android.gms:play-services-auth:10.2.0'
     compile 'commons-io:commons-io:2.4'
     compile 'org.apache.commons:commons-lang3:3.0'
     compile 'com.madgag.spongycastle:core:1.50.0.0'
@@ -55,6 +49,5 @@ dependencies {
     compile files('libs/javarosa-libraries.jar')
     compile files('libs/json_simple-1.1.jar')
     compile files('libs/kxml2-2.3.0.jar')
-    compile files('libs/nanohttpd-2.1.0.jar')
     compile files('libs/protobuf-j2me-1.0-RC1.jar')
 }
